<resources>
    <string name="app_name">Digital Passbook</string>
    <string name="organization_activity">Organization Activity</string>
    <string name="student_activity">Student Activity</string>
    <string name="register_activity">Register Activity</string>
    <string name="title_home">Home</string>
    <string name="title_create_event">Create Event</string>
    <string name="text_home">Home</string>
    <string name="text_create_event">Create Event</string>
    <string name="event_title_hint">Event Title</string>
    <string name="date_hint">Date</string>
    <string name="start_time_hint">Start Time</string>
    <string name="end_time_hint">End Time</string>
    <string name="description_hint">Description</string>
    <string name="title_activity_login">Sign in</string>
    <string name="signout_btn">Sign Out</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_class_year">Class Year</string>
    <string name="prompt_password">Password</string>
    <string name="register_question">Don\'t have an account?</string>
    <string name="action_register">Sign Up.</string>
    <string name="recover_password">Recover Password</string>
    <string name="action_sign_in_short">Log In</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_class_year">Not a valid graduating class year</string>
    <string name="invalid_first_name">First Name cannot be blank</string>
    <string name="invalid_last_name">Last Name cannot be blank</string>
    <string name="register_invalid_password">Password must be at least 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="view_button">View</string>
    <string name="send_button">Send</string>
    <string name="submit_button">Submit</string>
    <string name="scan_id_prompt">We ask you to scan your PUID or Driver\'s License to make club entry easier.</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_display_pass">Display Pass</string>
    <string name="title_send_pass">Send Pass</string>
    <string name="location_hint">Location</string>
    <string name="invited_hint">Invite</string>
    <string name="invite_a_guest">Invite by NetID</string>
    <string name="message_hint">Message (optional)</string>
    <string name="guest_name">Guest Name</string>
    <string name="guest_name_hint">Guest Name</string>
    <string name="number_hint">Passes per member:</string>
    <string name="title_eventbook">Events</string>
    <string name="title_passbook">Passbook</string>
    <string name="details_button">Details</string>
    <string name="title_event_details">Event Details</string>
    <string name="permanent_guest_list_invited">Permanent List</string>
    <string name="scan_prompt">Your Barcode Number: </string>
    <string name="transferability_text">Single Transfer</string>
    <string name="incomplete_scan">Incomplete</string>
    <string name="date">Date</string>
    <string name="skip">Skip</string>
    <string name="scan_complete">Finish</string>
    <string name="scan_here">Scan ID</string>
    <string name="time">Time</string>
    <string name="create_event_button">Create Event</string>
    <string name="set_date_time">Set</string>
    <string name="doors_text">to</string>
    <string name="see_more">See More</string>
    <string name="see_less">See Less</string>
    <string name="closing_visible">Show End Time</string>
    <string name="opening_visible">Show Start Time</string>
    <string name="number_text">Passes</string>
    <string name="closing_date_visible">Show End Date</string>
    <string name="public_event">Show to Campus</string>
    <string name="passes_per_member">Passes/Member</string>
    <string name="add_invited">Add</string>
    <string name="number_passes">2</string>
    <string name="set_button">Set</string>
    <string name="cancel_button">Cancel</string>
    <string name="doors_open_text">Doors Open:</string>
    <string name="doors_close_text">Doors Close:</string>
    <string name="dash">-</string>
    <string name="club_logo">Club Logo</string>
    <string name="pass_qr">Pass QR Code</string>
    <string name="title_logout">Logout</string>
    <string name="title_preferences">Preferences</string>
    <string name="menu_title">menu</string>
    <string name="title_notifications">Notifications</string>
    <string name="events">Events</string>
    <string name="send_pass">Edit Event</string>
    <string name="blank_username">Username cannot be blank</string>
    <string name="contains_whitespace">Username cannot have whitespace characters</string>
    <string name="text_image">Text Image</string>
    <string name="invited_text">Invited</string>
    <string name="spots_text">Spots</string>
    <string name="arrived_text">Students Arrived</string>
    <string name="save_changes">Save Changes</string>
    <string name="delete_event">Delete Event</string>
    <string name="main_activity">Main Activity</string>
    <string name="members_section_text">Number of Spots per Member:</string>
    <string name="passes_per_sophomore">2023:</string>
    <string name="passes_per_junior">2022:</string>
    <string name="passes_per_senior">2021:</string>
    <string name="passes_by_member">Passes by Member:</string>
    <string name="passes_by_member_desc">Passes by Member</string>
    <string name="title_activity_register">Registration</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_scanner">Scan ID</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="action_next">Next</string>
    <string name="welcome">"Welcome !"</string>
    <string name="user_created">User Successfully Created</string>
    <string name="menu_refresh">Refresh</string>
    <string name="scan_cancelled">Cancelled</string>
    <string name="title_activity_scan">Scanner</string>
    <string name="Back">Back</string>
    <string name="your_passes">Your Passes:</string>
    <string name="bouncer">bouncer</string>
    <string name="or_textview">or</string>
    <string name="type_here">Type ID</string>
    <string name="on_list">on list?</string>
    <string name="leave">leave</string>
    <string name="access">access</string>
    <string name="add_a_bouncer">Bouncer Username</string>
    <string name="membership_text">Membership:</string>
    <string name="add_member">Add/remove member by NetID</string>
    <string name="subtract_member">Remove member</string>
    <string name="event_settings">Event Settings:</string>
    <string name="event_defaults">Event Defaults:</string>
    <string name="name">Name:</string>
    <string name="title">Title:</string>
    <string name="description">Description:</string>
    <string name="event_description_hint">Event Description</string>
    <string name="event_location_hint">Event Location</string>
    <string name="location">Location:</string>
    <string name="single_transfer_text">Single Transfer:</string>
    <string name="opening_visible_text">Show Start Time:</string>
    <string name="closing_date_visible_text">Show End Date:</string>
    <string name="closing_time_visible_text">Show End Time:</string>
    <string name="update_event_defaults">Update Event Defaults</string>
    <string name="username_lowercase">Username must be lowercase</string>
    <string name="event_capacity">Event Capacity</string>
    <string name="event_distributed">Passes Distributed</string>
    <string name="ok_button">OK</string>
    <string name="x_button">x</string>
    <string name="your_pass">Your Pass</string>
    <string name="extra_pass">Extra Pass</string>
    <string name="no_events">Events Are Shown Here</string>
    <string name="title_scan_pass">Scan Pass</string>
    <string name="scan_explanation">Scanning Your ID Lets You Get In More Quickly At The Door!</string>
    <string name="pass">Pass $passNumber</string>
    <string name="info_button">info button</string>
</resources>
