<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/algo"
    android:icon="@drawable/ic_menu"
    app:showAsAction="always"
        android:title="@string/menu_title">
        <menu>
            <item
                android:id="@+id/navigation_home"
                android:icon="@drawable/ic_home"
                android:title="@string/title_home" />

            <item
                android:id="@+id/navigation_create_event"
                android:icon="@drawable/ic_create_event"
                android:title="@string/title_create_event" />

            <item
                android:id="@+id/navigation_notifications"
                android:icon="@drawable/ic_notifications"
                android:title="@string/title_notifications"/>

            <item
                android:id="@+id/navigation_preferences"
                android:icon="@drawable/ic_preferences"
                android:title="@string/title_preferences" />

            <item
                android:id="@+id/navigation_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/title_logout" />
        </menu>
    </item>
</menu>
