<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rootview"
    tools:context="com.example.digitalpassbook2.student.scan_pass.ScanPassFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:title=""
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_scan_pass"
            android:typeface="serif"
            android:textAppearance="@style/Toolbar.TitleText"
            android:layout_gravity="center"
            android:id="@+id/toolbar_title" />

    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/type_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        android:enabled="true"
        android:text="@string/type_here"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1" />

    <Button
        android:id="@+id/scanner_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="36dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="32dp"
        android:enabled="true"
        android:text="@string/scan_here"
        app:layout_constraintBottom_toTopOf="@id/type_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1" />

    <ImageView
        android:id="@+id/scan_result"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:enabled="true"
        android:gravity="start"
        android:text="@string/incomplete_scan"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.3"
        android:contentDescription="@string/on_list" />

</androidx.constraintlayout.widget.ConstraintLayout>