<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.digitalpassbook2.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_create_event"
            app:destination="@id/navigation_create_event" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_display_pass"
            app:destination="@id/navigation_display_pass" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_send_pass"
            app:destination="@id/navigation_send_pass" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_event"
        android:name="com.example.digitalpassbook2.ui.create_event.CreateEventFragment"
        android:label="@string/title_create_event"
        tools:layout="@layout/fragment_create_event" >
        <action
            android:id="@+id/action_navigation_create_event_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_display_pass"
        android:name="com.example.digitalpassbook2.ui.display_pass.DisplayPassFragment"
        android:label="@string/title_display_pass"
        tools:layout="@layout/fragment_display_pass" >
        <action
            android:id="@+id/action_navigation_display_pass_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="passArg"
            app:argType="long" />
        <argument
            android:name="clubArg"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/navigation_send_pass"
        android:name="com.example.digitalpassbook2.ui.send_pass.SendPassFragment"
        android:label="@string/title_send_pass"
        tools:layout="@layout/fragment_display_pass" >
        <action
            android:id="@+id/action_navigation_send_pass_to_navigation_home"
            app:destination="@id/navigation_home" />
        <argument
            android:name="passArg"
            app:argType="long" />
    </fragment>

</navigation>
