<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/organization_nav_graph"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.digitalpassbook2.organization.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_create_event"
            app:destination="@id/navigation_create_event" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_event_details"
            app:destination="@id/navigation_event_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_create_event"
        android:name="com.example.digitalpassbook2.organization.create_event.CreateEventFragment"
        android:label="@string/title_create_event"
        tools:layout="@layout/fragment_create_event" >
        <action
            android:id="@+id/action_navigation_create_event_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_event_details"
        android:name="com.example.digitalpassbook2.organization.event_details.EventDetailsFragment"
        android:label="@string/title_event_details"
        tools:layout="@layout/fragment_event_details" >
        <argument
            android:name="eventArg"
            app:argType="long" />
    </fragment>

</navigation>
